Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Removed a now useless translations about confirmation in directory actions.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 